--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ listenForUrlChangesMobileMenu()
               </h2>
               <p class="faq1-paragraph section-description">
                 <span>
-                  Send any questions to hey@videodeck.co or jump on a quick call
+                  Send any questions to hey@vidnobi.io or jump on a quick call
                   with us.
                 </span>
               </p>
@@ -1345,7 +1345,7 @@ listenForUrlChangesMobileMenu()
                   </div>
                   <div class="home-socials">
                     <a
-                      href="https://example.com"
+                      href="https://linked.in/"
                       target="_blank"
                       rel="noreferrer noopener"
                       class="home-link1"
@@ -1357,7 +1357,7 @@ listenForUrlChangesMobileMenu()
                       />
                     </a>
                     <a
-                      href="https://example.com"
+                      href="https://instagram.com/vidnobi.io"
                       target="_blank"
                       rel="noreferrer noopener"
                       class="home-link2"
@@ -1369,7 +1369,7 @@ listenForUrlChangesMobileMenu()
                       />
                     </a>
                     <a
-                      href="https://example.com"
+                      href="https://twitter.com/vidnobi.io"
                       target="_blank"
                       rel="noreferrer noopener"
                       class="home-link3"
@@ -1389,10 +1389,10 @@ listenForUrlChangesMobileMenu()
                     </div>
                     <div class="home-links">
                       <span class="footer-link">
-                        <span>+201114444100</span>
+                        <a href="tel:+201114444100">+201114444100</a>
                         <br />
                         <br />
-                        <span>hey@vidnobi.io</span>
+                        <a href="mailto:hey@vidmobi.io?subject=Let's Work Together">hey@vidnobi.io</a>
                         <br />
                         <br />
                         <span>Address: EG</span>
@@ -1455,7 +1455,7 @@ listenForUrlChangesMobileMenu()
             </main>
             <section class="home-copyright1">
               <span class="home-text52">
-                © 2022 latitude. All Rights Reserved.
+                © 2023 Bedroz. All Rights Reserved.
               </span>
             </section>
           </div>
