--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@ listenForUrlChangesMobileMenu()
                       <span class="footer-header">Company</span>
                     </div>
                     <div class="home-links1">
-                      <span class="footer-link">About</span>
+                      <span class="footer-link"><a href=#section.home-about>About</a></span>
                       <span class="footer-link">
                         <span>Services</span>
                         <br />
