--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ listenForUrlChangesMobileMenu()
           <section class="card-card card-root-class-name1">
             <main class="card-content"></main>
             <div class="card-container">
-              <h1 class="card-header"><span>What is Vidnobi?</span></h1>
+              <h1 class="card-header" id="about"><span>What is Vidnobi?</span></h1>
               <h1 class="card-text">
                 <span>
                   We are a better way to outsource video production. We help
@@ -239,7 +239,7 @@ listenForUrlChangesMobileMenu()
               <span class="our-services-section section-head">
                 <span>Our Services</span>
               </span>
-              <h2 class="our-services-heading section-heading">
+              <h2 id="services" class="our-services-heading section-heading">
                 <span>
                   Every B2B company should be a media company. Let’s make it
                   happen together.
@@ -295,7 +295,7 @@ listenForUrlChangesMobileMenu()
         <section class="testimonials-testimonials">
           <header class="testimonials-header">
             <header class="testimonials-left">
-              <h2 class="testimonials-heading section-heading">
+              <h2 id="testimonials" class="testimonials-heading section-heading">
                 <span>What clients say about us</span>
               </h2>
             </header>
@@ -456,7 +456,7 @@ listenForUrlChangesMobileMenu()
               <span class="process-section section-head">
                 <span>Our Process</span>
               </span>
-              <h2 class="process-heading section-heading">
+              <h2 id="process" class="process-heading section-heading">
                 <span>How the magic happens</span>
               </h2>
             </header>
@@ -543,10 +543,10 @@ listenForUrlChangesMobileMenu()
         <section class="faq1-faq">
           <header class="faq1-header">
             <span class="faq1-section section-head">
-              <span>COmmon Questions</span>
+              <span>Common Questions</span>
             </span>
             <header class="faq1-header1">
-              <h2 class="faq1-heading section-heading">
+              <h2 id="faq" class="faq1-heading section-heading">
                 <span>Not quite convinced?</span>
                 <br />
               </h2>
@@ -731,7 +731,7 @@ listenForUrlChangesMobileMenu()
           </div>
           <main class="home-banner">
             <div class="home-header1">
-              <h2 class="section-heading">
+              <h2 id="contact" class="section-heading">
                 Contact us and we'll get back in under 24 hours. Pinky promisse!
               </h2>
             </div>
@@ -1411,15 +1411,15 @@ listenForUrlChangesMobileMenu()
                       <span class="footer-header">Company</span>
                     </div>
                     <div class="home-links1">
-                      <span class="footer-link"><a href=#section.home-about>About</a></span>
+                      <span class="footer-link"><a href=#about>About</a></span>
                       <span class="footer-link">
-                        <span>Services</span>
+                        <span><a href=#services>Services</a></span>
                         <br />
                       </span>
-                      <span class="footer-link">Testimonials</span>
-                      <span class="footer-link">Process</span>
-                      <span class="footer-link">FAQ</span>
-                      <span class="footer-link">Contact Us</span>
+                      <span class="footer-link"><a href=#testimonials>Testimonials</a></span>
+                      <span class="footer-link"><a href=#process>Process</a></span>
+                      <span class="footer-link"><a href=#faq>FAQ</a></span>
+                      <span class="footer-link"><a href=#contact>Contact Us</a></span>
                     </div>
                   </div>
                 </header>
