--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ listenForUrlChangesMobileMenu()
                 alt="image"
                 src="public/SectionImages/heroimage-700w.png"
                 class="home-image6"
+                id="about"
               />
             </div>
           </div>
@@ -221,7 +222,7 @@ listenForUrlChangesMobileMenu()
           <section class="card-card card-root-class-name1">
             <main class="card-content"></main>
             <div class="card-container">
-              <h1 class="card-header" id="about"><span>What is Vidnobi?</span></h1>
+              <h1 class="card-header"><span>What is Vidnobi?</span></h1>
               <h1 class="card-text">
                 <span>
                   We are a better way to outsource video production. We help
@@ -234,12 +235,12 @@ listenForUrlChangesMobileMenu()
           </section>
         </section>
         <section class="our-services-our-services">
-          <header class="our-services-header">
+          <header id="services" class="our-services-header">
             <header class="our-services-left">
               <span class="our-services-section section-head">
                 <span>Our Services</span>
               </span>
-              <h2 id="services" class="our-services-heading section-heading">
+              <h2 class="our-services-heading section-heading">
                 <span>
                   Every B2B company should be a media company. Let’s make it
                   happen together.
@@ -288,14 +289,14 @@ listenForUrlChangesMobileMenu()
                 src="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/6321baba2cd2b3a8f928265d_loudspeaker_1f4e2.png"
                 class="cards-image"
               />
-              <h1 class="cards-text"><span>Announcement videos</span></h1>
+              <h1 id="testimonials" class="cards-text"><span>Announcement videos</span></h1>
             </section>
           </main>
         </section>
         <section class="testimonials-testimonials">
           <header class="testimonials-header">
             <header class="testimonials-left">
-              <h2 id="testimonials" class="testimonials-heading section-heading">
+              <h2 class="testimonials-heading section-heading">
                 <span>What clients say about us</span>
               </h2>
             </header>
