--- a/index.html
+++ b/index.html
@@ -213,12 +213,11 @@ listenForUrlChangesMobileMenu()
                 alt="image"
                 src="public/SectionImages/heroimage-700w.png"
                 class="home-image6"
-                id="about"
               />
             </div>
           </div>
         </section>
-        <section class="home-about">
+        <section id="about" class="home-about">
           <section class="card-card card-root-class-name1">
             <main class="card-content"></main>
             <div class="card-container">
@@ -234,8 +233,8 @@ listenForUrlChangesMobileMenu()
             </div>
           </section>
         </section>
-        <section class="our-services-our-services">
-          <header id="services" class="our-services-header">
+        <section id="services" class="our-services-our-services">
+          <header class="our-services-header">
             <header class="our-services-left">
               <span class="our-services-section section-head">
                 <span>Our Services</span>
@@ -542,12 +541,12 @@ listenForUrlChangesMobileMenu()
           </section>
         </section>
         <section class="faq1-faq">
-          <header class="faq1-header">
+          <header id="faq" class="faq1-header">
             <span class="faq1-section section-head">
               <span>Common Questions</span>
             </span>
             <header class="faq1-header1">
-              <h2 id="faq" class="faq1-heading section-heading">
+              <h2 class="faq1-heading section-heading">
                 <span>Not quite convinced?</span>
                 <br />
               </h2>
@@ -724,7 +723,7 @@ listenForUrlChangesMobileMenu()
             </div>
           </main>
         </section>
-        <section class="home-contact">
+        <section id="contact" class="home-contact">
           <div class="home-cube">
             <div class="home-top1 side"></div>
             <div class="home-front side"></div>
@@ -732,7 +731,7 @@ listenForUrlChangesMobileMenu()
           </div>
           <main class="home-banner">
             <div class="home-header1">
-              <h2 id="contact" class="section-heading">
+              <h2 class="section-heading">
                 Contact us and we'll get back in under 24 hours. Pinky promisse!
               </h2>
             </div>
