--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
           />
           <div class="navbar-nav-content">
             <div class="navbar-nav-links">
-              <span class="navbar-link nav-link">Services</span>
-              <span class="nav-link">Examples</span>
-              <span class="nav-link">Process</span>
-              <span class="nav-link">FAQs</span>
+              <span class="nav-link"><a href=#about>About</a></span>
+              <span class="nav-link"><a href=#services>Services</a></span>
+              <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
+              <span class="nav-link"><a href=#process>Process</a></span>
+              <span class="nav-link"><a href=#faq>FAQ</a></span>
             </div>
             <div class="get-started navbar-get-started">
-              <span class="navbar-text">Get started</span>
+              <span class="navbar-text"><a href="#contact">Get started</a></span>
             </div>
             <div id="open-mobile-menu" class="navbar-hamburger get-started">
               <img
@@ -95,13 +96,14 @@
               </div>
             </div>
             <div class="navbar-nav-links1">
-              <span class="nav-link">Features</span>
-              <span class="nav-link">Why us</span>
-              <span class="nav-link">Prices</span>
-              <span class="nav-link">Contact</span>
+              <span class="nav-link"><a href=#about>About</a></span>
+              <span class="nav-link"><a href=#services>Services</a></span>
+              <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
+              <span class="nav-link"><a href=#process>Process</a></span>
+              <span class="nav-link"><a href=#faq>FAQ</a></span>
             </div>
             <div class="get-started">
-              <span class="navbar-text1">Get started</span>
+              <span class="navbar-text1"><a href="#contact">Get started</a></span>
             </div>
           </div>
           <div>
@@ -201,12 +203,22 @@ listenForUrlChangesMobileMenu()
                 </label>
               </div>
             </div>
-            <div class="home-image3">
-              <img
-                alt="image"
-                src="public/SectionImages/heroimage-700w.png"
-                class="home-image4"
-              />
+            <div class="video-wrapper">
+              <img src="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/62fe9f5aa7e0e82aae7d82cb_maxresdefault%20(8).jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 95vw, (max-width: 1919px) 96vw, 1248.0035400390625px" srcset="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/62fe9f5aa7e0e82aae7d82cb_maxresdefault%20(8)-p-500.jpg 500w, https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/62fe9f5aa7e0e82aae7d82cb_maxresdefault%20(8)-p-800.jpg 800w, https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/62fe9f5aa7e0e82aae7d82cb_maxresdefault%20(8)-p-1080.jpg 1080w, https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/62fe9f5aa7e0e82aae7d82cb_maxresdefault%20(8).jpg 1280w" alt="Header video thumbnail for video production services" class="rounded-image">
+              <a href="#" class="circle-large video-circle-large w-inline-block w-lightbox" aria-label="open lightbox" aria-haspopup="dialog"><img src="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/62fe4c0df9e6126e91ecd131_video-play.svg" alt=""><script type="application/json" class="w-json">{
+  "items": [
+    {
+      "url": "https://www.youtube.com/watch?v=CCQKCJJZCSk",
+      "originalUrl": "https://www.youtube.com/watch?v=CCQKCJJZCSk",
+      "width": 940,
+      "height": 528,
+      "thumbnailUrl": "https://i.ytimg.com/vi/CCQKCJJZCSk/hqdefault.jpg",
+      "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FCCQKCJJZCSk%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DCCQKCJJZCSk&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FCCQKCJJZCSk%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen=\"true\"></iframe>",
+      "type": "video"
+    }
+  ],
+  "group": ""
+}</script></a>
             </div>
             <div class="home-image5">
               <img
