--- a/index.html
+++ b/index.html
@@ -212,13 +212,9 @@ listenForUrlChangesMobileMenu()
             class="home-video"
           ></video>
         </div>
-            <div class="home-image5">
-              <img
-                alt="image"
-                src="public/SectionImages/heroimage-700w.png"
-                class="home-image6"
-              />
-            </div>
+        <div class="home-image4">
+          <img alt="image" src="/heroimage-700w.png" class="home-image5" />
+        </div>
           </div>
         </section>
         <section id="about" class="home-about">
