--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ listenForUrlChangesMobileMenu()
             </div>
             <div class="home-image3">
           <video
-            src
+            src="https://video.twimg.com/ext_tw_video/1661455079461867529/pu/vid/1280x720/2vTpowmOZ1CQXCZK.mp4?tag=12"
             poster="https://play.teleporthq.io/static/svg/videoposter.svg"
             loop
             autoplay
@@ -213,7 +213,7 @@ listenForUrlChangesMobileMenu()
           ></video>
         </div>
         <div class="home-image4">
-          <img alt="image" src="/heroimage-700w.png" class="home-image5" />
+          <img alt="image" src class="home-image5" />
         </div>
           </div>
         </section>
