--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@ listenForUrlChangesMobileMenu()
                 </header>
                 <div class="home-buttons">
                   <div class="home-get-started button">
-                    <span class="home-text">Get started</span>
+                    <span class="home-text"><a href="#contact">Get started</a></span>
                   </div>
                   <div class="home-get-started1 button">
-                    <span class="home-text01">View features</span>
+                    <span class="home-text01"><a href="#services">View features</a></span>
                   </div>
                 </div>
               </main>
@@ -202,7 +202,6 @@ listenForUrlChangesMobileMenu()
                   Loved by 10,000+ people like you.
                 </label>
               </div>
-            </div>
             <div class="home-image3">
           <video
             src="https://video.twimg.com/ext_tw_video/1661455079461867529/pu/vid/1280x720/2vTpowmOZ1CQXCZK.mp4?tag=12"
@@ -213,7 +212,7 @@ listenForUrlChangesMobileMenu()
           ></video>
         </div>
         <div class="home-image4">
-          <img alt="image" src class="home-image5" />
+          <img alt="image" src="/heroimage-700w.png" class="home-image5" />
         </div>
           </div>
         </section>
