--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@ listenForUrlChangesMobileMenu()
             <div class="home-image3">
           <video
             src="https://video.twimg.com/ext_tw_video/1661455079461867529/pu/vid/1280x720/2vTpowmOZ1CQXCZK.mp4?tag=12"
-            poster="https://play.teleporthq.io/static/svg/videoposter.svg"
-            loop
             autoplay
+            loop
+            preload="auto"
             class="home-video"
           ></video>
         </div>
