--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       font-weight: bold;
       text-align: center;
       margin: 100px auto;
+      background-color: black;
+      color: white;
+      min-height: 50vh;
     }
   </style>
     <script>
