--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ listenForUrlChangesMobileMenu()
             preload="auto"
             class="home-video"
           ></video>
+              <button type="button" id="playVideo">+</button>
         </div>
         <div class="home-image4">
           <img alt="image" src="/heroimage-700w.png" class="home-image5" />
