--- a/index.html
+++ b/index.html
@@ -231,7 +231,9 @@ listenForUrlChangesMobileMenu()
             preload="auto"
             class="home-video"
           ></video>
-              <button type="button" id="playVideo">+</button>
+              <div class="playVideo">
+    <img src="play-button.png" alt="Play button">
+  </div>
         </div>
         <div class="home-image4">
           <img alt="image" src="/heroimage-700w.png" class="home-image5" />
