--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
               <span class="nav-link"><a href=#about>About</a></span>
               <span class="nav-link"><a href=#services>Services</a></span>
               <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
-              <span class="nav-link"><a href=#process>Process</a></span>
+             <!-- <span class="nav-link"><a href=#process>Process</a></span>
               <span class="nav-link"><a href=#faq>FAQ</a></span>
             </div>
             <div class="get-started navbar-get-started">
-              <span class="navbar-text"><a href="#contact">Get started</a></span>
+              <span class="navbar-text"><a href="#contact">Get started</a></span> -->
             </div>
             <div id="open-mobile-menu" class="navbar-hamburger get-started">
               <img
@@ -121,11 +121,11 @@
               <span class="nav-link"><a href=#about>About</a></span>
               <span class="nav-link"><a href=#services>Services</a></span>
               <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
-              <span class="nav-link"><a href=#process>Process</a></span>
+              <!-- span class="nav-link"><a href=#process>Process</a></span>
               <span class="nav-link"><a href=#faq>FAQ</a></span>
             </div>
             <div class="get-started">
-              <span class="navbar-text1"><a href="#contact">Get started</a></span>
+              <span class="navbar-text1"><a href="#contact">Get started</a></span> -->
             </div>
           </div>
           <div>
