--- a/index.html
+++ b/index.html
@@ -188,11 +188,10 @@ listenForUrlChangesMobileMenu()
             <header class="home-header">
               <span class="home-caption">We Film and Edit Your Videos.</span>
               <h1 class="home-heading">
-                Win more customers with done-for-you product videos⚡️
+                Video Production That Will Help You Achieve Your Business Goals⚡️
               </h1>
               <span class="home-caption1">
-                Send us the script, we have the studio, cameras, and actors -
-                you&apos;ll get a video in under 10 days.
+                Engage your audience with captivating animations that tell your story. Our expert animators bring your ideas to life, creating a visual experience that resonates with your viewers.
               </span>
             </header>
             <div class="home-buttons">
@@ -234,9 +233,9 @@ listenForUrlChangesMobileMenu()
             muted
             preload="auto"
             autoplay
-            controls
             class="home-video"
           ></video>
+          <div class="playpause"></div>
         </div>
         <div class="home-image4">
           <video
@@ -245,9 +244,9 @@ listenForUrlChangesMobileMenu()
             muted
             preload="auto"
             autoplay
-            controls
             class="home-video1"
           ></video>
+          <div class="playpause"></div>
         </div>
       </div>
     </section>
