--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
     <meta name="twitter:image" content="https://vidnobi.io">
     <meta name="twitter:image:alt" content="Vidnobi">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+     <script
+        type="text/javascript"
+        src="https://unpkg.com/dangerous-html@0.1.12/dist/default/lib.umd.js"
+      ></script>
+      <link href="./home.css" rel="stylesheet" />
+      <script>
+        $('.home-video').parent().click(function () {
+  if($(this).children(".home-video").get(0).paused){        $(this).children(".home-video").get(0).play();   $(this).children(".playpause").fadeOut();
+    }else{       $(this).children(".home-video").get(0).pause();
+  $(this).children(".playpause").fadeIn();
+    }
+});
+      </script>
+    
     <style data-tag="reset-style-sheet">
       html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
     </style>
@@ -74,20 +89,6 @@
   </head>
   <body>
     <div>
-      <script
-        type="text/javascript"
-        src="https://unpkg.com/dangerous-html@0.1.12/dist/default/lib.umd.js"
-      ></script>
-      <link href="./home.css" rel="stylesheet" />
-      <script>
-        $('.home-video').parent().click(function () {
-  if($(this).children(".home-video").get(0).paused){        $(this).children(".home-video").get(0).play();   $(this).children(".playpause").fadeOut();
-    }else{       $(this).children(".home-video").get(0).pause();
-  $(this).children(".playpause").fadeIn();
-    }
-});
-      </script>
-
       <div class="home-container">
         <nav class="navbar-navbar navbar-root-class-name">
           <img
