--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script>
       var play_pause_status = "play";
       
-      var bunnyVideo = document.getElementById("home-video");
+      var bunnyVideo = document.getElementById("video.home-video");
       function playPause() { 
         if (play_pause_status == "pause")
         {           
