--- a/index.html
+++ b/index.html
@@ -237,21 +237,24 @@ listenForUrlChangesMobileMenu()
             id="home-video"
             onclick="playPause()"
           ></video>
-          <div class="playpause" onclick="playPause()"></div>
+          <div id="playpause" class="playpause" onclick="playPause()"></div>
              <script>
       var play_pause_status = "play";
       
       var bunnyVideo = document.getElementById("home-video");
-      console.log(bunnyVideo)
+      var button = document.getElementById("playpause");
+               
       function playPause() { 
         if (play_pause_status == "pause")
         {           
           bunnyVideo.play();
+          button.fadeOut();
           play_pause_status = "play";
         }
         else 
         {
-        bunnyVideo.pause();
+          bunnyVideo.pause();
+          button.fadeIn();
           play_pause_status = "pause";
         }
       } 
