--- a/index.html
+++ b/index.html
@@ -238,26 +238,32 @@ listenForUrlChangesMobileMenu()
             onclick="playPause()"
           ></video>
           <div id="playpause" class="playpause" onclick="playPause()"></div>
-             <script>
-      var play_pause_status = "play";
+             <script type="text/javascript">
+               $('.home-video').parent().click(function () {
+  if($(this).children(".home-video").get(0).paused){        $(this).children(".home-video").get(0).play();   $(this).children(".playpause").fadeOut();
+    }else{       $(this).children(".home-video").get(0).pause();
+  $(this).children(".playpause").fadeIn();
+    }
+});
+      <!-- var play_pause_status = "play";
       
-      var bunnyVideo = document.getElementById("home-video");
-      var button = document.getElementById("playpause");
+      <!-- var bunnyVideo = document.getElementById("home-video");
+      <!-- var button = document.getElementById("playpause");
                
-      function playPause() { 
-        if (play_pause_status == "pause")
-        {           
-          bunnyVideo.play();
-          button.fadeOut();
-          play_pause_status = "play";
-        }
-        else 
-        {
-          bunnyVideo.pause();
-          button.fadeIn();
-          play_pause_status = "pause";
-        }
-      } 
+      <!-- function playPause() { 
+      <!--   if (play_pause_status == "pause")
+       <!--  {           
+       <!--    bunnyVideo.play();
+     <!--      button.fadeOut();
+     <!--      play_pause_status = "play";
+     <!--    }
+    <!--     else 
+   <!--      {
+   <!--        bunnyVideo.pause();
+   <!--        button.fadeIn();
+    <!--       play_pause_status = "pause";
+    <!--     }
+   <!--    }
     </script>
         </div>
         <div class="home-image4">
