--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ listenForUrlChangesMobileMenu()
         <div class="home-content">
           <main class="home-main">
             <header class="home-header">
-              <span class="home-caption">We Film and Edit Your Videos.</span>
+              <span class="home-caption">We Make Videos.</span>
               <h1 class="home-heading">
                 Video Production That Will Help You Achieve Your Business Goals⚡️
               </h1>
