--- a/index.html
+++ b/index.html
@@ -263,11 +263,13 @@ listenForUrlChangesMobileMenu()
         <div class="home-container1">
           <h1 class="home-header01">What is Vidnobi?</h1>
           <h1 class="home-text02">
-            We are a better way to outsource video production. We help software
-            companies produce videos at scale. We are a team of videographers,
-            actors and social media marketers here to produce your videos in a
-            top of the line studio.
+            An on-demand video production agency. We help SaaS, Web3, AI Companies, and Creators convert Leads into Clients by producing engaging videos that fulfill your Video Marketing goals.
           </h1>
+          <img
+            src="https://em-content.zobj.net/thumbs/160/apple/271/direct-hit_1f3af.png"
+            alt="image"
+            class="home-image7"
+          />
         </div>
       </section>
     </section>
