--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@ listenForUrlChangesMobileMenu()
         <header class="home-left">
           <span class="home-section section-head">Our Services</span>
           <h2 class="home-heading1 section-heading">
-            Every B2B company should be a media company. Let’s make it happen
-            together.
+            Our expret video editing services will take your content to the next level. Let us help you bring your vision to life!
           </h2>
         </header>
       </header>
