--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
               <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
              <!-- <span class="nav-link"><a href=#process>Process</a></span>
               <span class="nav-link"><a href=#faq>FAQ</a></span>
-            </div>
+            </div> -->
             <div class="get-started navbar-get-started">
-              <span class="navbar-text"><a href="#contact">Get started</a></span> -->
+              <span class="navbar-text"><a href="#contact">Coming Soon</a></span>
             </div>
             <div id="open-mobile-menu" class="navbar-hamburger get-started">
               <img
@@ -195,10 +195,10 @@ listenForUrlChangesMobileMenu()
             </header>
             <div class="home-buttons">
               <div class="home-get-started button">
-                <span class="home-text">Get started</span>
+                <span class="home-text">Coming Soon</span>
               </div>
               <div class="home-get-started1 button">
-                <span class="home-text01">View features</span>
+                <span class="home-text01"><a href=#services>View features</a></span>
               </div>
             </div>
           </main>
