--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <span class="nav-link"><a href=#faq>FAQ</a></span>
             </div> -->
             <div class="get-started navbar-get-started">
-              <span class="navbar-text"><a href="#contact">Coming Soon</a></span>
+              <span class="navbar-text"><a href="#soon">Coming Soon</a></span>
             </div>
             <div id="open-mobile-menu" class="navbar-hamburger get-started">
               <img
