--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
               <span class="nav-link"><a href=#about>About</a></span>
               <span class="nav-link"><a href=#services>Services</a></span>
               <span class="nav-link"><a href=#testimonials>Testimonials</a></span>
-             <!-- <span class="nav-link"><a href=#process>Process</a></span>
-              <span class="nav-link"><a href=#faq>FAQ</a></span>
-            </div> -->
+            </div>
             <div class="get-started navbar-get-started">
               <span class="navbar-text"><a href="#soon">Coming Soon</a></span>
             </div>
