--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ listenForUrlChangesMobileMenu()
             class="cards-image"
           />
           <h1 class="cards-text">
-            <span>Features spotlight video series</span>
+            <span>Engaging animation videos</span>
           </h1>
         </section>
         <section class="cards-card cards-root-class-name6">
@@ -354,21 +354,19 @@ listenForUrlChangesMobileMenu()
             <main class="review-content">
               <p class="review-quote">
                 <span>
-                  They helped write the script, set the stage to fit our brand
-                  identity and delivered the video in four days from sending the
-                  script.
+                  They provided the video in four days after receiving the outline, expertly edited the videos, and arranged the scene to reflect our corporate identity.
                 </span>
               </p>
               <div class="review-author">
                 <img
                   alt="image"
-                  src="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/632317e8a7d2e1a39640c17b_andrei-p-500.jpg"
+                  src="https://media.licdn.com/dms/image/C4D03AQEivIdkkm5z0Q/profile-displayphoto-shrink_200_200/0/1516256673455?e=1691020800&v=beta&t=KKbFkvq0LUmBDQ1CzJGtQjc4gjIkP8NcagaNVXAauEw"
                   class="review-avatar"
                 />
                 <div class="review-details">
-                  <h1 class="review-author1"><span>Andrei Temneanu</span></h1>
+                  <h1 class="review-author1"><span>Pablo Martín</span></h1>
                   <label class="review-position">
-                    <span>Marketing Manager</span>
+                    <span>Founding Partner - 121 Group</span>
                   </label>
                 </div>
               </div>
@@ -411,13 +409,13 @@ listenForUrlChangesMobileMenu()
               <div class="review-author">
                 <img
                   alt="image"
-                  src="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/63231fd0c4b9b7c57e359dd5_1653016883244-p-500.jpg"
+                  src="https://media.licdn.com/dms/image/C4D03AQEMDqzgOiGaoA/profile-displayphoto-shrink_200_200/0/1609460173782?e=1691020800&v=beta&t=WqdeHIeen3OjtSgMp3gfJRm-RJB0AsOW_G7dXKNOoEc"
                   class="review-avatar"
                 />
                 <div class="review-details">
-                  <h1 class="review-author1"><span>David Bernal</span></h1>
+                  <h1 class="review-author1"><span>Patricia Martínez</span></h1>
                   <label class="review-position">
-                    <span>Growth Marketing Manager</span>
+                    <span>Digital Marketing Manager</span>
                   </label>
                 </div>
               </div>
@@ -452,19 +450,18 @@ listenForUrlChangesMobileMenu()
             <main class="review-content">
               <p class="review-quote">
                 <span>
-                  Working with Vidnobi was an obvious decision for us when the
-                  minimum quote we've got from other agencies was $5k/video.
+                  When we learned that the least quotation we could get from other companies was $5k per video, choosing to work with Vidnobi was a no-brainer for us.
                 </span>
               </p>
               <div class="review-author">
                 <img
                   alt="image"
-                  src="https://uploads-ssl.webflow.com/62fe4c0cf9e612b304ecd08b/63243a2dc415e10449cdb958_Untitled%20design%20(18)-p-500.png"
+                  src="https://media.licdn.com/dms/image/D5603AQGDTASp1rB6bA/profile-displayphoto-shrink_200_200/0/1674154168644?e=1691020800&v=beta&t=w2Zs21VOBKW9f2ck6j6OThkx56PgGjc0U-weEmauoo8"
                   class="review-avatar"
                 />
                 <div class="review-details">
-                  <h1 class="review-author1"><span>Sergiu</span></h1>
-                  <label class="review-position"><span>CMO</span></label>
+                  <h1 class="review-author1"><span>Tyler Johnson</span></h1>
+                  <label class="review-position"><span>Marketing Executive - Abbott</span></label>
                 </div>
               </div>
             </main>
